tests/trybuild/stages/par_system_missing_comma.stderr
error: no rules expected the token `flush`
  --> tests/trybuild/stages/par_system_missing_comma.rs:18:5
   |
18 |     flush
   |     ^^^^^ no rules expected this token in macro call
